--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover, interactive-widget=resizes-content"
+/>
 <title>자동차보험 할인율 계산기</title>
 <style>
   :root{
@@ -15,7 +18,6 @@
     --best:#eff6ff;
     --accentMileage:#7c3aed;
 
-    /* 고려 특약(미가입) 강조 톤 */
     --warnBg:#fff1f2;
     --warnBorder:#fecdd3;
     --warnTitle:#be123c;
@@ -26,8 +28,9 @@
   html, body{
     width:100%;
     max-width:100%;
+    overflow-x:clip;
     overflow-x:hidden;
-    -webkit-text-size-adjust:100%; /* 카카오 인앱에서 글자 자동확대 방지 */
+    -webkit-text-size-adjust:100%;
     text-size-adjust:100%;
   }
 
@@ -158,6 +161,9 @@
     display:none;
     border-top:2px solid var(--line);
     padding-top:18px;
+    width:100%;
+    max-width:100%;
+    overflow-x:hidden;
   }
 
   .card{
@@ -167,18 +173,24 @@
     padding:14px;
     margin-bottom:12px;
     box-shadow:0 2px 6px rgba(0,0,0,0.05);
+    width:100%;
+    max-width:100%;
+    overflow-x:hidden;
   }
   .card.best{
     border:2px solid var(--primary);
     background:var(--best);
   }
 
+  /* ===== 핵심: card-top을 2열 grid로 강제(인앱 flex 폭 튐 방지) ===== */
   .card-top{
-    display:flex;
-    justify-content:space-between;
+    display:grid;
+    grid-template-columns: 1fr minmax(0, 340px);
     gap:12px;
-    align-items:flex-start;
+    align-items:start;
+    min-width:0;
   }
+  .card-top > div:first-child{ min-width:0; }
 
   .co-name{
     font-weight:950;
@@ -186,9 +198,14 @@
     display:flex;
     align-items:center;
     gap:8px;
+
+    min-width:0;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
   }
 
-  .badges{ display:flex; gap:6px; align-items:center; flex-wrap:wrap; }
+  .badges{ display:flex; gap:6px; align-items:center; flex-wrap:wrap; min-width:0; }
   .badge{
     font-size:0.78rem;
     font-weight:950;
@@ -198,6 +215,7 @@
     background:#fff;
     color:#374151;
     white-space:nowrap;
+    flex:0 0 auto;
   }
   .badge.best{
     border-color:#93c5fd;
@@ -206,14 +224,16 @@
   }
 
   .rate-box{
-    display:flex;
+    width:100%;
+    min-width:0;
+    max-width:100%;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
     gap:10px;
     align-items:stretch;
-    min-width:0;
   }
 
   .rate{
-    min-width:132px;
     border:1px solid #d1d5db;
     background:#fff;
     border-radius:12px;
@@ -221,10 +241,20 @@
     display:flex;
     flex-direction:column;
     gap:4px;
+
+    min-width:0;
+    max-width:100%;
     text-align:right;
-    min-width:0; /* WebView flex 폭 계산 안정화 */
   }
-  .rate .k{ font-size:0.78rem; color:var(--muted); font-weight:900; }
+  .rate .k{
+    font-size:0.78rem;
+    color:var(--muted);
+    font-weight:900;
+    min-width:0;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+  }
   .rate .v{ font-size:1.24rem; font-weight:950; color:#111827; }
   .rate.instant .v{ color:#1d4ed8; }
   .rate.mileage .v{ color:var(--accentMileage); }
@@ -282,7 +312,7 @@
   @media (max-width: 520px){
     body{
       padding:12px;
-      display:block; /* 카카오 인앱 포함 iOS WebView에서 flex 중앙정렬이 깨짐 유발 */
+      display:block;
     }
 
     .container{
@@ -305,20 +335,16 @@
     .pill{ width:100%; justify-content:space-between; }
 
     .card-top{
-      flex-direction:column;
-      align-items:stretch;
+      grid-template-columns: 1fr;
       gap:10px;
     }
 
     .rate-box{
-      width:100%;
-      display:grid;
-      grid-template-columns:1fr;
+      grid-template-columns: 1fr;
       gap:10px;
     }
 
     .rate{
-      min-width:0; /* 기존 132px 강제폭 해제 */
       width:100%;
       text-align:left;
     }
@@ -327,18 +353,17 @@
   }
 
   @media (min-width: 521px) and (max-width: 720px){
-    body{ display:block; } /* 인앱 안정화 */
+    body{ display:block; }
     .card-top{
-      flex-direction:column;
+      grid-template-columns: 1fr;
       align-items:stretch;
     }
     .rate-box{
-      display:grid;
-      grid-template-columns:1fr 1fr;
+      grid-template-columns: 1fr 1fr;
       width:100%;
       gap:10px;
     }
-    .rate{ min-width:0; width:100%; text-align:left; }
+    .rate{ width:100%; text-align:left; }
   }
 </style>
 </head>
@@ -473,6 +498,12 @@
   </div>
 
   <button class="primary" onclick="calculate()">할인율 계산하기</button>
+
+  <!-- 임시: 오버플로우 범인 찾기 버튼 -->
+  <button class="primary" style="background:#111827" onclick="findOverflow()">
+    오버플로우 범인 찾기(임시)
+  </button>
+
   <div id="result"></div>
 </div>
 
@@ -656,6 +687,38 @@
 
   function fmtRate(x){
     return `${Number(x).toFixed(2)}%`;
+  }
+
+  // 임시: 가로 오버플로우 범인 찾기
+  function findOverflow(){
+    const docW = document.documentElement.clientWidth;
+    const list = Array.from(document.querySelectorAll('body *'));
+
+    // 기존 표시 제거(원하면 유지해도 됨)
+    list.forEach(el => { el.style.outline = ''; el.style.outlineOffset = ''; });
+
+    const offenders = list
+      .map(el => {
+        const r = el.getBoundingClientRect();
+        return { el, r, overflow: r.right - docW, w: r.width };
+      })
+      .filter(x => x.overflow > 1);
+
+    offenders
+      .sort((a,b)=> b.overflow - a.overflow)
+      .slice(0, 15)
+      .forEach((x, i) => {
+        x.el.style.outline = '2px solid #ff0000';
+        x.el.style.outlineOffset = '-2px';
+        console.log(
+          `${i+1}. +${x.overflow.toFixed(1)}px`,
+          x.el,
+          'class=', x.el.className,
+          'width=', x.w.toFixed(1)
+        );
+      });
+
+    alert(`docW=${docW}, offenders=${offenders.length}\n빨간 테두리 표시된 요소가 범인 후보입니다.`);
   }
 
   function calculate(){
@@ -849,6 +912,15 @@
           ${considerHtml}
         </div>
       `;
+    });
+
+    // iOS WebView에서 innerHTML 직후 폭 계산 타이밍 문제 완화
+    requestAnimationFrame(() => {
+      requestAnimationFrame(() => {
+        document.documentElement.scrollLeft = 0;
+        document.body.scrollLeft = 0;
+        window.dispatchEvent(new Event('resize'));
+      });
     });
   }
 
