Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -335,10 +335,6 @@
     line-height:1.55;
     font-weight:900;
   }
-  .footer-notice .title{
-    font-size:0.95rem;
-    margin-bottom:8px;
-  }
   .footer-notice ul{
     margin:0;
     padding-left:18px;
@@ -549,14 +545,16 @@
 
   <div id="result"></div>
 
-  <!-- 하단 준법감시/저작권 문구 -->
+  <!-- 하단 준법감시/저작권 문구 (제목 문구 삭제, 마지막 문구 교체) -->
   <div class="footer-notice">
-    <div class="title">Copyright / 준법감시 안내</div>
     <ul>
       <li>본 계산기는 (주)에이플러스에셋어드바이저의 소중한 지적 재산으로, 당사 설계사의 업무 지원을 목적으로만 제공됩니다.</li>
       <li>본 계산기를 회사 외부인(타 법인, 타 설계사 조직, 일반 고객 등)에게 제공하거나, 온라인 커뮤니티, SNS, 메신저, 클라우드 저장소 등에 게시, 업로드하는 행위는 엄격히 금지됩니다.</li>
       <li>본 계산기의 전부 또는 일부를 무단으로 외부에 유출하거나, 변경, 편집, 2차 가공하여 사용할 경우, 관련 법령 및 지식재산권에 따른 민형사상 책임이 발생할 수 있으며, 회사 내부 규정에 따른 제재가 병행될 수 있습니다.</li>
-      <li>본 계산기는 법적 효력이 없으며, 보험료의 산정 근거가 될 수 없습니다. 보험료 산정에 대한 세부 기준은 회사별, 차종별, 연식별, 특약별 상이할 수 있습니다.</li>
+      <li>
+        본 계산기는 법적 효력이 없으며, 보험료의 산정 근거가 될 수 없습니다. 할인율 산정 기준은 40세/1인한정/개인용 기준으로 산출되었으며, 최대 할인율 기준으로 적용되었습니다.
+        보험료 산정에 대한 세부 기준은 회사별, 차종별, 연식별, 특약별 등 기준이 상이할 수 있습니다.
+      </li>
     </ul>
   </div>
 </div>
